update BOSH Design principles topic

--- a/design.html.md.erb
+++ b/design.html.md.erb
@@ -6,9 +6,12 @@ BOSH is an open framework for managing the full development and deployment life 
 
 BOSH:
 
-* Leverages IaaS APIs to create VMs from base images packaged with operator-defined network, storage, and software configurations
-* Monitors and manages VM and process health, detecting and restarting processes or VMs when they become unhealthy
-* Updates all VMs reliably and idempotently whether the update is to the OS, a package, or any other component
+* Leverages IaaS APIs to create VMs from base images packaged with 
+  operator-defined network, storage, and software configurations
+* Monitors and manages VM and process health, detecting and restarting processes 
+  or VMs when they become unhealthy
+* Updates all VMs reliably and idempotently whether the update is to the OS, a 
+  package, or any other component
 
 ## <a id="predictable"></a>BOSH Deployments are Predictable ##
 
@@ -22,7 +25,7 @@ consistent way, the state of your deployment is known throughout its lifecycle.
 
 ## <a id="repeatable"></a>BOSH Deployments are Repeatable ##
 
-Every time you repeat a deployment, the result is exactly the same deployed
+Every time you repeat a BOSH deployment, the result is exactly the same deployed
 system.
 
 ## <a id="self-healing"></a>BOSH Deployments are Self-Healing ##
