typo: missing comma

--- a/design.html.md.erb
+++ b/design.html.md.erb
@@ -6,11 +6,11 @@ BOSH is an open framework for managing the full development and deployment life 
 
 BOSH:
 
-* Leverages IaaS APIs to create VMs from base images packaged with 
+* Leverages IaaS APIs to create VMs from base images packaged with
   operator-defined network, storage, and software configurations
-* Monitors and manages VM and process health, detecting and restarting processes 
+* Monitors and manages VM and process health, detecting and restarting processes
   or VMs when they become unhealthy
-* Updates all VMs reliably and idempotently whether the update is to the OS, a 
+* Updates all VMs reliably and idempotently, whether the update is to the OS, a
   package, or any other component
 
 ## <a id="predictable"></a>BOSH Deployments are Predictable ##
