--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -30,10 +30,13 @@ manifest.
 
     <%= image_tag("images/micro-aws/aws-console.png") %>
 
-1. Click your account name and select **Security Credentials** to display the
-Security Credentials page.
+1. Click your account name and select **Security Credentials**.
 
     <%= image_tag("images/micro-aws/seccred-drop.png") %>
+
+1. In the AWS IAM confirmation box, click **Continue to Security Credentials** to display the Security Credentials page.
+
+    <%= image_tag("images/micro-aws/iam-confirm.png") %>
 
 1. Expand the **Access Keys** section.
 
@@ -48,6 +51,17 @@ Security Credentials page.
 1. Save the Key File.
 
 1. Close the dialog box.
+
+1. Open the downloaded Key File in a text editor. Record the value of
+**AWSAccessKeyId** as your `access_key_id` and **AWSSecretKey** as your
+`secret_access_key` for use in [Step 2: Create the Deployment Manifest](#create-manifest).
+
+    Example:
+
+    <%= image_tag("images/micro-aws/record-key.png") %>
+
+    In this example, the `access_key_id` is _BM456AB123C2GZFTQQHA_ and
+    `secret_access_key` is _L2lCSPI9zp7nAzFraZaMonf1OxddoO5Iaaqutx3n_.
 
 ### <a id="create-key-pair"></a>Create a Key Pair ###
 
@@ -71,8 +85,9 @@ Security Credentials page.
 
     <%= image_tag("images/micro-aws/save-pem.png") %>
 
-1. Rename this file to `bosh` and save it in the `~/.ssh` folder on your computer.
-For example, on OSX you can do this from the terminal:
+1. Rename this file to `bosh` and save it in the `~/.ssh` folder on your
+computer.
+For example, on OS X you can do this from the terminal:
 
 <pre class="terminal">
   mv ~/Downloads/bosh.pem ~/.ssh/bosh
@@ -140,7 +155,8 @@ Click **Yes, Allocate**.
 
 1. Click **Yes, Create**.
 
-1. Select the BOSH Security Group and click the **Inbound Rules** tab.
+1. Ensure the BOSH Security Group is selected and click the **Inbound Rules**
+tab.
 
     <%= image_tag("images/micro-aws/edit-rules.png") %>
 
@@ -168,15 +184,26 @@ debug) opened for inbound traffic. Add the following rules:
 
 1. Click **Save**.
 
+    **Note**: Ensure that the **Save Successfully** message displays. You may
+    have to refresh the page to view the updated inbound rules.
+
 ## <a id="create-manifest"></a>Step 2: Create Deployment Manifest ##
 
 The MicroBOSH deployment manifest is a YAML file that defines the components and
-properties of the deployment.
+properties of the deployment. Create a manifest for your deployment as follows:
 
-Use the MicroBOSH deployment manifest template to create a deployment manifest
-named `micro_bosh.yml`.
-Replace the following properties in the template with the relevant information
-from AWS:
+1. Create a local "deployments" directory to store your manifest.
+
+    <pre class='terminal'>
+    $ mkdir ~/workspace/deployments
+    </pre>
+
+1. Download the MicroBOSH deployment manifest [template](./micro_bosh.yml) to
+your "deployments" directory. If necessary, rename the template file as
+`micro_bosh.yml`.
+
+1. Open the `micro_bosh.yml` file in a text editor. Replace the following
+properties in the template with the relevant information from AWS:
 
 * ELASTIC-IP-ADDRESS
 * MICROBOSH-SUBNET-ID
@@ -191,18 +218,17 @@ The MicroBOSH deployment manifest template:
 <pre class='terminal'>
 ---
 name: micro-bosh
-
 logging:
 level: debug
 
 network:
   type: manual
-  vip:  ELASTIC-IP-ADDRESS
+  vip: ELASTIC-IP-ADDRESS # Replace with your Elastic IP address
   ip: 10.0.0.6
   dns:
   - 10.0.0.2
   cloud_properties:
-    subnet: MICROBOSH-SUBNET-ID
+    subnet: MICROBOSH-SUBNET-ID # Replace with your MicroBOSH subnet ID
 
 resources:
   persistent_disk: 20000
@@ -214,8 +240,8 @@ cloud:
   plugin: aws
   properties:
     aws:
-      access_key_id: ACCESS-KEY-ID
-      secret_access_key: SECRET-ACCESS-KEY
+      access_key_id: ACCESS-KEY-ID # Replace with your AWSAccessKeyId
+      secret_access_key: SECRET-ACCESS-KEY # Replace with your AWSSecretKey
       default_key_name: bosh
       default_security_groups: ["bosh"]
       region: us-east-1
@@ -232,9 +258,10 @@ apply_spec:
       address: 10.0.0.6
 </pre>
 
-## <a id="create-manifest"></a>Step 3: Download MicroBOSH stemcell and extract AMI ID ##
+## <a id="create-manifest"></a>Step 3: Download MicroBOSH stemcell and extract AMI Identifier ##
 
-1. In a terminal window, run `bosh public stemcells` to see a list of publicly available BOSH stemcells.
+1. In a terminal window, run `bosh public stemcells` from your "deployments"
+directory to see a list of publicly available BOSH stemcells.
 
     <pre class='terminal'>
     $ bosh public stemcells
@@ -252,7 +279,9 @@ apply_spec:
     +-------------------------------------------------------------+
 </pre>
 
-1. Run `bosh download public stemcell` to download the latest light-bosh version for aws-xen-ubuntu. Example:
+1. BOSH stemcell names include the type, BOSH build number, target IaaS and hypervisior, and underlying operating system. Run `bosh download public stemcell STEMCELL-NAME` to download any "light-bosh" stemcell for aws-xen-ubuntu.
+
+    Example:
 
     <pre class='terminal'>
     $ bosh download public stemcell light-bosh-stemcell-2427-aws-xen-ubuntu.tgz
@@ -260,14 +289,13 @@ apply_spec:
 
 1. Extract the `stemcell.MF` file from the stemcell. Open `stemcell.MF` in a text editor.
 
-1. The `stemcell.MF` contains the Amazon Machine Image (AMI) identifier for this
-version of MicroBOSH.
-BOSH CLI uses the BOSH AMI ID to deploy MicroBOSH to AWS.
+1. The `stemcell.MF` contains an Amazon Machine Image (AMI) identifier.
+The BOSH CLI uses the AMI identifier to deploy MicroBOSH to AWS.
 Record the AMI identifier for use in [Step 4 Deploy MicroBOSH to AWS](#deploy).
 
-In this example `stemcell.MF` file, the AMI ID is `ami-03223a6a`:
+    In this example `stemcell.MF` file, the AMI identifier is `ami-03223a6a`:
 
-<pre class='terminal'>
+    <pre class='terminal'>
 ---
 name: bosh-aws-xen-ubuntu
 version: '2427'
@@ -281,40 +309,46 @@ cloud_properties:
   root_device_name: /dev/sda1
   ami:
     us-east-1: ami-03223a6a  # This is the Amazon Machine Image (AMI) identifier
-</pre>
+    </pre>
 
 ## <a id="deploy"></a>Step 4: Deploy MicroBOSH ##
 
-1. Use `bosh micro deployment PATH-TO-micro_bosh.yml` to set MicroBOSH to use your manifest file.
-
-    In the following example, `micro_bosh.yml` is located in `~/workspace/my-deployment`:
+1. In a terminal window, run `bosh micro deployment micro_bosh.yml` from your
+"deployments" directory to instruct MicroBOSH to use your manifest file.
 
     <pre class='terminal'>
-    $ bosh micro deployment ~/workspace/my-deployment/micro_bosh.yml
+    $ bosh micro deployment micro_bosh.yml
     WARNING! Your target has been changed to https://54.86.66.111:25555!
-    Deployment set to ~workspace/my-deployment/micro_bosh.yml
+    Deployment set to ~workspace/deployment/micro_bosh.yml
     </pre>
 
-    **Note**: The `WARNING!` message alerts you to a change in targeted Elastic IP address, and is not an error message.
+    **Note**: The `WARNING!` message alerts you to a change in targeted Elastic
+    IP address, and is not an error message.
 
-1. Use `bosh micro deploy AMI-ID` to deploy MicroBOSH using the AMI ID from the
-downloaded stemcell.
+1. Use `bosh micro deploy AMI-IDENTIFIER` to deploy MicroBOSH using the AMI
+identifier from the downloaded stemcell.
 
-    Example:
+    **Note**: A red `No bosh-deployments.yml file found` warning is expected.
+    If prompted to allow MicroBOSH to "save state" in the current directory,
+    type **yes**.
 
     <pre class='terminal'>
     $ bosh micro deploy ami-03223a6a
-    Deploying new micro BOSH instance ~/workspace/my-deployments/micro_bosh.yml to 'https://54.86.66.111:25555' (type 'yes' to continue): yes
+
+    No 'bosh-deployments.yml' file found in current directory.
+
+    Conventionally, 'bosh-deployments.yml' should be saved in ~/workspace.
+    Is ~/workspace/deployments a directory where you can save state? (type 'yes' to continue): yes
+
+    Deploying new micro BOSH instance ~/workspace/deployments/micro_bosh.yml to 'https://54.86.66.111:25555' (type 'yes' to continue): yes
       Started deploy micro bosh
       ...
       Done deploy micro bosh
-    Deployed '~/workspace/my-deployments/micro_bosh.yml' to 'https://54.86.66.111:25555', took 00:04:51 to complete
+    Deployed '~/workspace/deployments/micro_bosh.yml' to 'https://54.86.66.111:25555', took 00:04:51 to complete
     </pre>
 
 1. Use `bosh target ELASTIC-IP-ADDRESS` to log into your new MicroBOSH server.
 The default username and password are `admin` and `admin`.
-
-    Example:
 
     <pre class="terminal">
     $ bosh target 54.86.66.111
