update BOSH jobs and errands topic

--- a/job-logs.html.md.erb
+++ b/job-logs.html.md.erb
@@ -2,7 +2,7 @@
 title: How to Locate and Watch Logs on Job VMs
 ---
 
-When deploying a BSOH release, such as the Cloud Foundry cf-release, a job might
+When deploying a BOSH release, such as the Cloud Foundry cf-release, a job might
 fail to run.
 
 Example:
