--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -233,5 +233,5 @@ To save log files and screen output from a BOSH errand VM:
 ## <a id="errand-running"></a>Warnings and Additional Information ##
 
 * Errands do not have a notion of persistence. Persistent disk migration for errands is not supported.
-* Whenever an errand runs, BOSH initiates a deployment lock. This lock prevent all other deploys. Additionally, the BOSH CLI `cck` command is unavailable, and the health monitor does not scan and fix current deployments during the duration of the errand.
+* Whenever an errand runs, BOSH initiates a deployment lock. This lock prevent all other deploys. Additionally, the BOSH CLI `cloudcheck` command is unavailable, and the health monitor does not scan and fix current deployments during the duration of the errand.
 * Currently, BOSH limits errand output to 1 MB. BOSH discards errand output greater than 1 MB.
