remove unexpected external link

--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -74,7 +74,7 @@ the processes in a job instance.
 Templates contain information common to all job instances created using the
 template, and consist of plain text and Ruby code for variable substitution and
 flow control.
-BOSH evaluates these templates as Ruby [ERB template](http://www.stuartellis.eu/articles/erb/) files when creating an
+BOSH evaluates these templates as Ruby ERB template files when creating an
 instance of a job.
 
 ### <a id="monitoring"></a>Monitoring ###
