change link from 'Jobs and Errands' to BOSH Jobs and Errands

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -20,7 +20,7 @@ freeing operators from concerns about differences between environments.
 * [BOSH Terminology](./terminology.html)
 * [Understanding BOSH](./understanding-bosh.html)
 * [BOSH Components](./bosh-components.html)
-* [Jobs and Errands](./jobs.html)
+* [BOSH Jobs and Errands](./jobs.html)
 * [Basic BOSH Workflow](./workflow.html)
 * [BOSH Design Principles](./design.html)
 
