--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -202,7 +202,7 @@ Use `bosh cancel task <task_id>` to cancel a running errand.
 $ bosh cancel task 123
 </pre>
 
-The `bosh cancel errand` command terminates the errand process, releases the
+The `bosh cancel task` command terminates the errand process, releases the
 deployment lock, and returns the errand VM to the resource pool.
 
 #### <a id="errand-logging"></a>Errand Logging ####
