--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -31,7 +31,8 @@ DEA job.
 
 ## <a id="jobs-vs-errands"></a>Errands ##
 
-An **errand** is a type of BOSH job that runs once or only on demand. 
+An **errand** is a type of BOSH job that runs once or only on demand. Examples include smoke tests and Cloud Foundry service broker binding.
+ 
 
 To distinguish an errand from a job, set the `lifecycle` property for
 the errand in the [Jobs Block](./deployment-manifest.html#jobs) of the
@@ -39,8 +40,6 @@ deployment manifest to `errand`.
 If this property is not set, BOSH uses the default value `service` and
 configures instances of the job to run as long as the deployment runs.
 
-Common BOSH errands include any task meant to be run once or only on demand.
-Examples include smoke tests and Cloud Foundry service broker binding.
 
 **Notes**: 
 
@@ -65,24 +64,26 @@ BOSH does not monitor the health of any processes in instances of an errand.
 A job specification, or **spec**, is a YAML document that lists:
 
 * Required [packages](./reference/packages.html): A package contains source code
- and a script. The script describes how to compile the source code and install the
- resultant binary. Optionally, packages can contain the names of other packages this package depends on.
-* Job templates: The names and file paths to [job templates](#templates) that the job uses.
+ and a script. The script describes how to compile the source code and install 
+ the resultant binary. Optionally, a package can contain the names of other 
+ packages this package depends on.
+* Job templates: The names and file paths to [job templates](#templates) that 
+the job uses.
 * Job properties: BOSH uses job properties when creating an instance of a job. 
-Typical job properties include account names, passwords, shared secrets, hostnames, 
+Typical job properties include account names, passwords, shared secrets, 
+hostnames, 
 IP addresses, port numbers, and descriptions.
 
 ### <a id="templates"></a>Templates ###
 
+Templates contain information shared across jobs or errands, such as account 
+names and passwords. Templates consist of plain text and Ruby code for variable 
+substitution and flow control. BOSH evaluates these templates as Ruby ERB 
+template files when creating an instance of a job.
+
 At compile time, BOSH uses job templates to create the control scripts and
 configuration files that the BOSH [agent](./terminology.html#agent) needs to run
 the processes in a job instance.
-
-Templates contain information common to all job instances created using the
-template, and consist of plain text and Ruby code for variable substitution and
-flow control.
-BOSH evaluates these templates as Ruby ERB template files when creating an
-instance of a job.
 
 ### <a id="monitoring"></a>Monitoring ###
 
@@ -90,7 +91,7 @@ instance of a job.
 
 BOSH uses [monit](http://mmonit.com/monit/) to manage and monitor the health of 
 processes in an instance of a job.
-Using monit, BOSH can start, stop, and restart instances of a job when
+Using `monit`, BOSH can start, stop, and restart instances of a job when
 necessary.
 
 A functioning `monit` requires, at a minimum, three parts for each process in a
@@ -100,6 +101,8 @@ job:
 * `start program`: Command monit uses to start the process
 * `stop program`: Command monit uses to stop the process
 
+See the [monit file example](#running-jobs).
+ 
 **Note**: When developing or testing a release, you can use an empty `monit`
 file.
 
@@ -109,8 +112,8 @@ BOSH does not monitor the health of any processes in an instance of an errand.
 
 ## <a id="running"></a>Running Jobs and Errands ##
 
-BOSH ensures an instance of a job always runs in a predictable, deterministic
-environment by creating a new VM specifically for the instance.
+BOSH ensures an instance of a job or errand always runs in a predictable, 
+deterministic environment by creating a new VM specifically for the instance.
 
 ### <a id="running-jobs"></a>Running Jobs ###
 
@@ -136,9 +139,8 @@ You cannot cancel jobs.
 ### <a id="errand-running"></a>Running Errands ###
 
 An operator runs a BOSH errand using the `bosh run errand` command.
-To facilitate this, an errand defined in a BOSH release should provide an
+To facilitate this, an errand defined in a BOSH release must provide an
 executable `/bin/run` script.
-
 
 BOSH does the following when it runs an errand:
 
@@ -153,8 +155,7 @@ BOSH does the following when it runs an errand:
 1. Releases the deployment lock
 1. Releases the VM back into the resource pool
  
-Use `bosh run errand ERRAND-NAME` to run an errand. ERRAND-NAME must be the name 
-of an errand provided in the deployment manifest.
+Use `bosh run errand ERRAND-NAME` to run an errand. ERRAND-NAME must be the name of an errand provided in the deployment manifest.
 
 Example:
 
@@ -162,13 +163,14 @@ Example:
 $ bosh run errand smoke-test
 </pre>
 
-The `bosh run errand` command compiles all packages the errand job requires and 
-executes the `/bin/run` script that the BOSH release provides for the errand.
+The `bosh run errand` command compiles all packages that the errand requires 
+and executes the `/bin/run` script that the BOSH release provides for the 
+errand.
 
 **Example Executable /bin/run Script**
 
-This is an example `/bin/run` script for a BOSH errand that de-registers a service
-broker.
+This is an example `/bin/run` script for a BOSH errand that de-registers a 
+service broker.
 
 <pre class='terminal'>
 #!/bin/bash
